--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-*.pickle
-*.pid
-apidoc
+.coverage
 *.pyc
-build
+_build
 dist
 aioipfs_api.egg-info
-docs/_build
-.coverage
 coverage.xml
-.pytest_cache
